proj/tbitsroot/tbits/src/java/transbit/tbits/dql/antlr/DQLParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g 2011-10-18 11:10:30

  package transbit.tbits.dql.antlr;
  import java.util.ArrayList;
  import transbit.tbits.dql.treecomponents.*;
  import transbit.tbits.dql.treecomponents.ParseResult.*;
  import transbit.tbits.dql.antlr.DQLErrorReporter;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class DQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INTEGER", "NOT", "NULL", "STRING_LITERAL", "REAL", "BOOLEAN", "DATETIME", "LITERAL", "ORDER", "DIGIT", "LETTER", "ESCAPE", "WS_OTHERS", "'SELECT'", "'*'", "','", "'FROM'", "'WHERE'", "'HAS TEXT'", "'ORDER BY'", "'LIMIT'", "'('", "')'", "':'", "'IN'", "'{'", "'}'", "'AND'", "'OR'", "'and'", "'or'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='"
    };
    public static final int EOF=-1;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int INTEGER=4;
    public static final int NOT=5;
    public static final int NULL=6;
    public static final int STRING_LITERAL=7;
    public static final int REAL=8;
    public static final int BOOLEAN=9;
    public static final int DATETIME=10;
    public static final int LITERAL=11;
    public static final int ORDER=12;
    public static final int DIGIT=13;
    public static final int LETTER=14;
    public static final int ESCAPE=15;
    public static final int WS_OTHERS=16;

    // delegates
    // delegators


        public DQLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DQLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DQLParser.tokenNames; }
    public String getGrammarFileName() { return "/home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g"; }


    	public DQLErrorReporter errReporter = new DQLErrorReporter();
    	
       	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
        	String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            errReporter.addError(hdr + " " + msg);
        }


    public static class query_return extends ParserRuleReturnScope {
        public ParseResult result;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "query"
    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:31:1: query returns [ParseResult result] : select ( from )? ( where )? ( has_text )? ( order_by )? ( limit )? EOF ;
    public final DQLParser.query_return query() throws RecognitionException {
        DQLParser.query_return retval = new DQLParser.query_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF7=null;
        DQLParser.select_return select1 = null;

        DQLParser.from_return from2 = null;

        DQLParser.where_return where3 = null;

        DQLParser.has_text_return has_text4 = null;

        DQLParser.order_by_return order_by5 = null;

        DQLParser.limit_return limit6 = null;


        Object EOF7_tree=null;

        try {
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:32:2: ( select ( from )? ( where )? ( has_text )? ( order_by )? ( limit )? EOF )
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:32:8: select ( from )? ( where )? ( has_text )? ( order_by )? ( limit )? EOF
            {
            root_0 = (Object)adaptor.nil();

            retval.result = new ParseResult();
            pushFollow(FOLLOW_select_in_query66);
            select1=select();

            state._fsp--;

            adaptor.addChild(root_0, select1.getTree());
            retval.result.setReqCols((select1!=null?select1.result:null));
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:34:3: ( from )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==20) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:34:4: from
                    {
                    pushFollow(FOLLOW_from_in_query75);
                    from2=from();

                    state._fsp--;

                    adaptor.addChild(root_0, from2.getTree());
                    retval.result.setBAs((from2!=null?from2.result:null));

                    }
                    break;

            }

            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:35:3: ( where )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==21) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:35:4: where
                    {
                    pushFollow(FOLLOW_where_in_query93);
                    where3=where();

                    state._fsp--;

                    adaptor.addChild(root_0, where3.getTree());
                    retval.result.setConstraintRoot((where3!=null?where3.result:null));

                    }
                    break;

            }

            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:36:3: ( has_text )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==22) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:36:4: has_text
                    {
                    pushFollow(FOLLOW_has_text_in_query108);
                    has_text4=has_text();

                    state._fsp--;

                    adaptor.addChild(root_0, has_text4.getTree());
                    retval.result.setTextRoot((has_text4!=null?has_text4.result:null));

                    }
                    break;

            }

            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:37:3: ( order_by )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==23) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:37:4: order_by
                    {
                    pushFollow(FOLLOW_order_by_in_query122);
                    order_by5=order_by();

                    state._fsp--;

                    adaptor.addChild(root_0, order_by5.getTree());
                    retval.result.setOrdering((order_by5!=null?order_by5.result:null));

                    }
                    break;

            }

            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:38:3: ( limit )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==24) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:38:4: limit
                    {
                    pushFollow(FOLLOW_limit_in_query136);
                    limit6=limit();

                    state._fsp--;

                    adaptor.addChild(root_0, limit6.getTree());
                    retval.result.setLimits((limit6!=null?limit6.pageNumber:0), (limit6!=null?limit6.pageSize:0));

                    }
                    break;

            }

            EOF7=(Token)match(input,EOF,FOLLOW_EOF_in_query145); 
            EOF7_tree = (Object)adaptor.create(EOF7);
            adaptor.addChild(root_0, EOF7_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "query"

    public static class select_return extends ParserRuleReturnScope {
        public ArrayList<String> result;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "select"
    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:42:1: select returns [ArrayList<String> result] : 'SELECT' ( '*' | (fn1= fieldName ( ',' fn2= fieldName )* ) ) ;
    public final DQLParser.select_return select() throws RecognitionException {
        DQLParser.select_return retval = new DQLParser.select_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal8=null;
        Token char_literal9=null;
        Token char_literal10=null;
        DQLParser.fieldName_return fn1 = null;

        DQLParser.fieldName_return fn2 = null;


        Object string_literal8_tree=null;
        Object char_literal9_tree=null;
        Object char_literal10_tree=null;

        try {
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:43:2: ( 'SELECT' ( '*' | (fn1= fieldName ( ',' fn2= fieldName )* ) ) )
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:43:10: 'SELECT' ( '*' | (fn1= fieldName ( ',' fn2= fieldName )* ) )
            {
            root_0 = (Object)adaptor.nil();

            retval.result = new ArrayList<String>();
            string_literal8=(Token)match(input,17,FOLLOW_17_in_select170); 
            string_literal8_tree = (Object)adaptor.create(string_literal8);
            adaptor.addChild(root_0, string_literal8_tree);

            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:45:3: ( '*' | (fn1= fieldName ( ',' fn2= fieldName )* ) )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==18) ) {
                alt7=1;
            }
            else if ( (LA7_0==STRING_LITERAL||LA7_0==LITERAL) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:46:3: '*'
                    {
                    char_literal9=(Token)match(input,18,FOLLOW_18_in_select179); 
                    char_literal9_tree = (Object)adaptor.create(char_literal9);
                    adaptor.addChild(root_0, char_literal9_tree);

                    retval.result.add(DqlConstants.REQUEST_COL);

                    }
                    break;
                case 2 :
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:47:4: (fn1= fieldName ( ',' fn2= fieldName )* )
                    {
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:47:4: (fn1= fieldName ( ',' fn2= fieldName )* )
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:48:3: fn1= fieldName ( ',' fn2= fieldName )*
                    {
                    pushFollow(FOLLOW_fieldName_in_select197);
                    fn1=fieldName();

                    state._fsp--;

                    adaptor.addChild(root_0, fn1.getTree());
                    retval.result.add((fn1!=null?fn1.result:null));
                    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:49:3: ( ',' fn2= fieldName )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==19) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:49:4: ',' fn2= fieldName
                    	    {
                    	    char_literal10=(Token)match(input,19,FOLLOW_19_in_select208); 
                    	    char_literal10_tree = (Object)adaptor.create(char_literal10);
                    	    adaptor.addChild(root_0, char_literal10_tree);

                    	    pushFollow(FOLLOW_fieldName_in_select213);
                    	    fn2=fieldName();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, fn2.getTree());
                    	    retval.result.add((fn2!=null?fn2.result:null));

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "select"

    public static class from_return extends ParserRuleReturnScope {
        public ArrayList<String> result;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "from"
    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:53:1: from returns [ArrayList<String> result] : 'FROM' ba1= baName ( ',' ba2= baName )* ;
    public final DQLParser.from_return from() throws RecognitionException {
        DQLParser.from_return retval = new DQLParser.from_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal11=null;
        Token char_literal12=null;
        DQLParser.baName_return ba1 = null;

        DQLParser.baName_return ba2 = null;


        Object string_literal11_tree=null;
        Object char_literal12_tree=null;

        try {
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:54:2: ( 'FROM' ba1= baName ( ',' ba2= baName )* )
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:54:9: 'FROM' ba1= baName ( ',' ba2= baName )*
            {
            root_0 = (Object)adaptor.nil();

            retval.result = new ArrayList<String>();
            string_literal11=(Token)match(input,20,FOLLOW_20_in_from250); 
            string_literal11_tree = (Object)adaptor.create(string_literal11);
            adaptor.addChild(root_0, string_literal11_tree);

            pushFollow(FOLLOW_baName_in_from254);
            ba1=baName();

            state._fsp--;

            adaptor.addChild(root_0, ba1.getTree());
            retval.result.add((ba1!=null?ba1.result:null));
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:56:3: ( ',' ba2= baName )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==19) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:56:4: ',' ba2= baName
            	    {
            	    char_literal12=(Token)match(input,19,FOLLOW_19_in_from263); 
            	    char_literal12_tree = (Object)adaptor.create(char_literal12);
            	    adaptor.addChild(root_0, char_literal12_tree);

            	    pushFollow(FOLLOW_baName_in_from267);
            	    ba2=baName();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ba2.getTree());
            	    retval.result.add((ba2!=null?ba2.result:null));

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "from"

    public static class where_return extends ParserRuleReturnScope {
        public Expression result;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "where"
    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:59:1: where returns [Expression result] : 'WHERE' expressionset ;
    public final DQLParser.where_return where() throws RecognitionException {
        DQLParser.where_return retval = new DQLParser.where_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal13=null;
        DQLParser.expressionset_return expressionset14 = null;


        Object string_literal13_tree=null;

        try {
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:60:2: ( 'WHERE' expressionset )
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:60:4: 'WHERE' expressionset
            {
            root_0 = (Object)adaptor.nil();

            string_literal13=(Token)match(input,21,FOLLOW_21_in_where289); 
            string_literal13_tree = (Object)adaptor.create(string_literal13);
            adaptor.addChild(root_0, string_literal13_tree);

            pushFollow(FOLLOW_expressionset_in_where291);
            expressionset14=expressionset();

            state._fsp--;

            adaptor.addChild(root_0, expressionset14.getTree());
            retval.result =(expressionset14!=null?expressionset14.result:null);

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "where"

    public static class has_text_return extends ParserRuleReturnScope {
        public Expression result;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "has_text"
    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:63:1: has_text returns [Expression result] : 'HAS TEXT' expressionset ;
    public final DQLParser.has_text_return has_text() throws RecognitionException {
        DQLParser.has_text_return retval = new DQLParser.has_text_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal15=null;
        DQLParser.expressionset_return expressionset16 = null;


        Object string_literal15_tree=null;

        try {
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:64:2: ( 'HAS TEXT' expressionset )
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:64:4: 'HAS TEXT' expressionset
            {
            root_0 = (Object)adaptor.nil();

            string_literal15=(Token)match(input,22,FOLLOW_22_in_has_text310); 
            string_literal15_tree = (Object)adaptor.create(string_literal15);
            adaptor.addChild(root_0, string_literal15_tree);

            pushFollow(FOLLOW_expressionset_in_has_text312);
            expressionset16=expressionset();

            state._fsp--;

            adaptor.addChild(root_0, expressionset16.getTree());
            retval.result =(expressionset16!=null?expressionset16.result:null);

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "has_text"

    public static class order_by_return extends ParserRuleReturnScope {
        public ArrayList<Ordering> result;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "order_by"
    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:67:1: order_by returns [ArrayList<Ordering> result] : 'ORDER BY' co1= column_order ( ',' co2= column_order )* ;
    public final DQLParser.order_by_return order_by() throws RecognitionException {
        DQLParser.order_by_return retval = new DQLParser.order_by_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal17=null;
        Token char_literal18=null;
        DQLParser.column_order_return co1 = null;

        DQLParser.column_order_return co2 = null;


        Object string_literal17_tree=null;
        Object char_literal18_tree=null;

        try {
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:68:2: ( 'ORDER BY' co1= column_order ( ',' co2= column_order )* )
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:68:11: 'ORDER BY' co1= column_order ( ',' co2= column_order )*
            {
            root_0 = (Object)adaptor.nil();

            retval.result = new ArrayList<Ordering>();
            string_literal17=(Token)match(input,23,FOLLOW_23_in_order_by341); 
            string_literal17_tree = (Object)adaptor.create(string_literal17);
            adaptor.addChild(root_0, string_literal17_tree);

            pushFollow(FOLLOW_column_order_in_order_by345);
            co1=column_order();

            state._fsp--;

            adaptor.addChild(root_0, co1.getTree());
            retval.result.add((co1!=null?co1.result:null));
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:70:3: ( ',' co2= column_order )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==19) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:70:4: ',' co2= column_order
            	    {
            	    char_literal18=(Token)match(input,19,FOLLOW_19_in_order_by352); 
            	    char_literal18_tree = (Object)adaptor.create(char_literal18);
            	    adaptor.addChild(root_0, char_literal18_tree);

            	    pushFollow(FOLLOW_column_order_in_order_by356);
            	    co2=column_order();

            	    state._fsp--;

            	    adaptor.addChild(root_0, co2.getTree());
            	    retval.result.add((co2!=null?co2.result:null));

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "order_by"

    public static class limit_return extends ParserRuleReturnScope {
        public int pageNumber;
        public int pageSize;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "limit"
    // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:73:1: limit returns [int pageNumber, int pageSize] : 'LIMIT' op1= INTEGER ',' op2= INTEGER ;
    public final DQLParser.limit_return limit() throws RecognitionException {
        DQLParser.limit_return retval = new DQLParser.limit_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token op1=null;
        Token op2=null;
        Token string_literal19=null;
        Token char_literal20=null;

        Object op1_tree=null;
        Object op2_tree=null;
        Object string_literal19_tree=null;
        Object char_literal20_tree=null;

        try {
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:74:2: ( 'LIMIT' op1= INTEGER ',' op2= INTEGER )
            // /home/karan/workspace/trunk/src/java/transbit/tbits/dql/antlr/DQL.g:74:4: 'LIMIT' op1= INTEGER ',' op2= INTEGER
            {
            root_0 = (Object)adaptor.nil();

            string_literal19=(Token)match(input,24,FOLLOW_24_in_limit377); 
            string_literal19_tree = (Object)adaptor.create(string_literal19);
            adaptor.addChild(root_0, string_literal19_tree);

            op1=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_limit381); 
            op1_tree = (Object)adaptor.create(op1);
            adaptor.addChild(root_0, op1_tree);

            retval.pageNumber =Integer.parseInt((op1!=null?op1.getText():null));
            char_literal20=(Token)match(input,19,FOLLOW_19_in_limit387); 
            char_literal20_tree = (Object)adaptor.create(char_literal20);
            adaptor.addChild(root_0, char_literal20_tree);

            op2=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_limit391); 
            op2_tree = (Object)adaptor.create(op2);
            adaptor.addChild(root_0, op2_tree);

            retval.pageSize =Integer.parseInt((op2!=null?op2.getText():null));

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "limit"

    public static class expression_return extends ParserRuleReturnScope {
        public Expression result;
        Object tree;
        public Object getTree() { return tree; }
    };
